--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,11 +3,15 @@
 one:
   name: MyString
   email: MyString
-  password: MyString
   phone_number: MyString
 
 two:
   name: MyString
   email: MyString
-  password: MyString
   phone_number: MyString
+
+mike:
+  id: '1'
+  name: mike Example
+  email: michael@example.com
+  phone_number: 123-123-1234
